# Compiler_2

./: CMakeLists.txt  Dockerfile  README.md  build.sh  main.cpp
ast/include/: expression.h  expressions.h  node.h  oop_nodes.h  program.h  statements.h
ast/src/: expressions.cpp  oop_nodes.cpp  program.cpp  statements.cpp
backend/include/: context.h
example/: example.txt  example_1.txt  example_oop.txt  example_shadowing.txt
frontend/: lexer.cpp  parser.cpp
frontend/include/: lexer.h  parser.h  token.h
frontend/include/ast/: expression.h  node.h  program.h
frontend/src/: lexer.cpp  parser.cpp
semantic/include/: scope_tree.h  symbol_table.h
tests/: test_lexer.cpp  test_parser.cpp  test_scope_visitor.cpp
visitor/include/: interpreter_visitor.h  llvm_visitor.h  print_visitor.h  scope_visitor.h  visitor.h
visitor/src/: interpreter_visitor.cpp  llvm_visitor.cpp  print_visitor.cpp  scope_visitor.cpp  visitor.cpp
